--- a/index.html
+++ b/index.html
@@ -109,5 +109,9 @@
         </li>
       </ul>
     </section>
+    <footer>
+      <p>© 2025 Anthony J. Colon Dominguez. All rights reserved.</p>
+      <p>This resume is a capstone project. For demonstration purposes only.</p>
+    </footer>
   </body>
 </html>
